# SimpleCodeAgent

./: .codexignore  .env  .env.example  .gitignore  AGENTS.md  README.md  histogram_matching.cpp  pyproject.toml  requirements.txt  run-all.sh  start.sh  tmp_tool_output.py
app/: main.py
app/api/: deps.py  server.py  trace.py  trigger_hit_counter.py  trigger_state_store.py
app/cli/: __init__.py  entry.py
app/contracts/: __init__.py  agent.py  memory.py  message.py  planner.py  run.py  tool.py  trace.py
app/core/: __init__.py  config.py  constants.py  exceptions.py  logger.py  session.py
app/db/: migrations.py  sqlite.py
app/llm/: __init__.py  client.py  parser.py  schemas.py
app/memory/: __init__.py  repository.py  session_memory.py  summary_memory.py
app/runtime/: __init__.py  context.py  executor.py  loop.py
app/tools/: __init__.py  append_file.py  base.py  file_search.py  list_dir.py  read_file.py  (+4 more)
docs/: agent_runtime.md  api_reference.md  architecture.md  coding_workflow.md  rag_usage.md  roadmap.md  teaching_roadmap.md  tooling.md  usage_guide.md  v2_status.md
scripts/: ingest_docs.py  run_cli.py  setup_coding_demo.py  view_trace.py
tests/: test_sqlite_legacy_migration.py  test_tool_registry_dummy.py  test_v1_regression.py  test_v2_external_coding_mvp.py  test_v2_memory.py  test_v2_p0.py  test_v2_p1.py  test_v2_p2.py  test_v2_plan_policy.py  test_v2_repository_list_recent.py  test_v2_runtime.py  test_v2_tester_failure_types.py  test_v3_runtime.py  test_webui_proxy.py
webui/: index.html  package-lock.json  package.json  start.sh  vite.config.js
(+164 files in other folders)
