[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-code-agent"
version = "0.1.0"
description = "A scalable Python project scaffold."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.1,<2.0.0",
    "pydantic>=2,<3",
]

[tool.setuptools]
packages = ["app", "app.contracts", "app.core", "app.db", "app.llm", "app.memory", "app.runtime", "app.tools"]
