[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-code-agent"
version = "0.1.0"
description = "A scalable Python project scaffold."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.1,<2.0.0",
    "pydantic>=2,<3",
    "chromadb>=1.5.5,<2",
    "pytest>=9,<10",
    "fastapi>=0.116,<1",
    "uvicorn>=0.35,<1",
    "pypdf>=5,<6",
    "python-docx>=1.1,<2",
]

[tool.setuptools]
packages = ["app", "app.api", "app.api.routes", "app.contracts", "app.core", "app.db", "app.llm", "app.trace", "app.v1", "app.v1.memory", "app.v1.planner", "app.v1.rag", "app.v1.runtime", "app.v1.tools", "app.v2", "app.v3", "app.v3.adapters", "app.v3.api", "app.v3.cli", "app.v3.contracts", "app.v3.events", "app.v3.graph", "app.v3.runtime", "app.v3.skills", "app.v3.skills.builtin", "app.v3.trace", "app.v3.trigger"]
